# alethia_deepresearch

./: .env.example  .gitignore  CI_CD_GUIDE.md  Dockerfile  README.md  SIMPLIFICATION.md  benchmark_performance.py  ci.err  cicd.err  deep_report.md  docker-compose.yml  payload.json  performance_results.json  plan.yaml  pyproject.toml  quick_load_test.py  report.md  requirements-optional.txt  requirements.txt
.github/workflows/: cd.yml  ci-cd.yml  ci.yml  pr-review.yml  release.yml
adapters/extractor/: __init__.py  pdf_extractor.py
adapters/guard/: __init__.py  basic_guard.py
adapters/mongodb/: __init__.py  mongodb_database.py
adapters/saptiva_model/: saptiva_client.py
adapters/security/: rate_limiter.py
adapters/tavily_search/: tavily_client.py
adapters/telemetry/: events.py  tracing.py
adapters/weaviate_vector/: __init__.py  weaviate_adapter.py
adapters/web_surfer/: __init__.py  basic_browser.py
adapters/websocket/: __init__.py  progress_manager.py
apps/api/: main.py
docs/: Description.txt  IMPLEMENTATION_SUMMARY.md  README.md  debugging.txt
docs/api/: README.md  openapi.json  openapi.yaml
docs/archive/: BUGS_FOUND.md  QUICKSTART.md  README_old.md  SIMPLIFICATION.md
docs/roadmaps/: TESTING_ROADMAP.md  performance_report.md
docs/testing/: TESTING_GUIDE.md  performance_results.json
domain/models/: evaluation.py  evidence.py  plan.py
domain/services/: evaluation_svc.py  iterative_research_svc.py  planner_svc.py  research_svc.py  writer_svc.py
examples/: README.md  deep_research.py  simple_research.py  simple_research.sh
infra/docker/: README.md  docker-compose.dev.yml  docker-compose.minimal.yml  docker-compose.yml  prometheus.yml  start.sh
infra/docker/grafana/dashboards/: aletheia-overview.json
infra/docker/postgres/: init.sql
infra/docker/redis/: redis.conf
infra/k8s/base/: deployment.yaml
infra/k8s/environments/development/: deployment-patch.yaml  kustomization.yaml
infra/k8s/environments/production/: deployment-patch.yaml  hpa.yaml  ingress.yaml  kustomization.yaml  network-policy.yaml  pod-disruption-budget.yaml
infra/k8s/environments/staging/: deployment-patch.yaml  ingress.yaml  kustomization.yaml
ports/: __init__.py  browser_port.py  database_port.py  doc_extract_port.py  guard_port.py  logging_port.py  model_client_port.py  search_port.py  storage_port.py  vector_store_port.py
scripts/: check_python_version.sh
scripts/deployment/: deploy-docker.sh  deploy-remote.sh  deploy.sh  setup-server.sh
tests/: conftest.py
tests/integration/: test_api_with_mongodb.py
tests/unit/: test_domain_models.py  test_evaluation_service.py  test_iterative_research_orchestrator.py  test_mongodb_adapter.py  test_planner_service.py  test_research_service.py  test_saptiva_adapter.py  test_tavily_adapter.py  test_telemetry.py  test_writer_service.py
tools/benchmarks/: benchmark_performance.py  load_test_suite.py  quick_load_test.py
tools/testing/: test_apis.py  test_saptiva_direct.py
